# avro_examples_serialization

./: .gitignore  README.md
avrocexample/tools/: ex.json
avrocppexample/: .gitignore  CMakeLists.txt
avrocppexample/include/: AvroEntities.hh  HKAvroEntities.cpp  HKAvroEntities.hh  HKUtils.cpp  HKUtils.hh
avrocppexample/schema/: hk-schema.json  wf-schema.json
avrocppexample/src/: main.cpp
ccsds/: CMakeLists.txt  HKtest.cpp  main.cpp
ccsds/include/: generators.cpp  generators.hh  packet.cpp  packet.h  tchandler.cpp  tchandler.h  tchandler_impl.hpp
ccsds/src/: HKtest.cpp  WFtest.cpp
protocol_buffer/: CMakeLists.txt  HK.proto  WF.proto  readerwriter.cpp
protocol_buffer/include/: ProtocolBufferEntities.hh  WFGenerator.cpp
protocol_buffer/src/: HK_main.cpp  WF_main.cpp
